# BitTorrent

./: .gitignore  README.md  pyproject.toml  requirements.txt
auth/: database.py  email_sender.py  encrypted_socket.py  key_exchanging.py  message_codes.py  server.py  users.pkl
core/: bencoding.py  client.py  protocol.py  torrent.py  tracker.py
gui/: app_gui.py
main/: cli_peer.py  gui_client.py
