[project]
name = "bittorrent-peer"
version = "1.0.0"
description = "A from-scratch BitTorrent peer in Python supporting leeching, seeding, tracker communication, and an encrypted authentication gateway."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
"customtkinter>=5.2.2",
"cryptography>=44.0.2",
"pillow>=11.3.0"
]

[tool.setuptools]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
